compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__imports__using_private_constructor_pattern.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 43
expression: "import one\n\npub fn main(x) {\n  let one.Two = x\n}"
---
----- SOURCE CODE
-- one.rakun
record Two { Two }

-- main.rakun
import one

pub fn main(x) {
  let one.Two = x
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.rakun:4:7
  │
4 │   let one.Two = x
  │       ^^^^^^^

The module `one` does not have a `Two` value.
